Moving URL bar fires visualViewport resize event

This CL makes it so that hiding or showing the URL bar continually fires
visualViewport resize events. Previously, the resize event would be
fired only once the user lifts their finger.

Bug: 762518
Change-Id: I09470b980d09b16d5cd7b60e98e7ec3653fdaa40